[package]
name = "bl_boot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "2.4.0"
bitfield-struct = "0.9.3"
clap = { version = "4.5.23", features = ["derive"] }
clap-num = "1.1.1"
env_logger = "0.11.6"
log = "0.4.22"
serialport = "4.6.1"
sha2 = "0.10.8"
zerocopy = "0.8.14"
zerocopy-derive = "0.8.14"
